add rule id comments and detail messege for examples

--- a/Rule_Writing/InsecureAuthenticationExample.yaml
+++ b/Rule_Writing/InsecureAuthenticationExample.yaml
@@ -3,5 +3,9 @@ rules:
     languages:
       - java
     severity: ERROR
-    message: Insecure authentication!
+    metadata:
+      cwe:
+        - "CWE-CWE-798: Use of Hard-coded Credentials"
+    message: Insecure authentication!the application implements a weak
+      authentication mechanism that does not enforce proper password check
     pattern: String $VAR = $VAL2;
