--- a/Rule_Writing/UnsafePasswordStorage.yaml
+++ b/Rule_Writing/UnsafePasswordStorage.yaml
@@ -3,7 +3,10 @@ rules:
     languages:
       - java
     severity: ERROR
-    message: Weak password!
+    metadata:
+      cwe:
+        - "CWE-CWE-798: Use of Hard-coded Credentials"
+    message: Weak password!the password is either stored in plaintext or hashed using a weak or outdated algorithm like MD5.
     pattern-either:
       - pattern: "MessageDigest $MD=MessageDigest.getInstance(...);\r
 
