make corrections in example

--- a/Rule_Writing/insufficiently_protected_credentials.yaml
+++ b/Rule_Writing/insufficiently_protected_credentials.yaml
@@ -2,12 +2,23 @@ rules:
   - id: jwt-insecure-algorithm
     languages:
       - js
-    severity: ERROR
+    severity: WARNING
     message: |
      Insecure JWT signing algorithm detected. Use a secure algorithm like 'RS256'.
      For details on how to implement `RS256`:https://jwt.io/introduction/
     patterns:
-      - pattern: var $TOKEN =jwt.sign(...,{algorithm:'$X'})
+      - pattern-inside: |
+          var $EX=require('express')
+          var $LG_CONTROLLER=$EX.Router(...)
+          var $JWT = require('jsonwebtoken')
+          ...
+          function $FUNCT(...){
+            ...
+          }
+      - pattern: var $TOKEN =$JWT.sign(...,{algorithm:'$X'})
       - metavariable-regex:
-          metavariable: $X
-          regex: none|HS256|HS384|HS512|ES256
+              metavariable: $X
+              regex: none|HS256|HS384|HS512|ES256
+    metadata:
+        cwe:
+          - "CWE-327: Use of a Broken or Risky Cryptographic Algorithm"
