make changes in rules

--- a/Rule_Writing/dns_prefetching.yaml
+++ b/Rule_Writing/dns_prefetching.yaml
@@ -7,12 +7,12 @@ rules:
      DNS Prefetching is allowed, which can lead to privacy risks. Set 'allow' to 'false' to disable DNS prefetching.You can refer to the official Helmet.js documentation for more information:https://helmetjs.github.io/ 
     patterns:
       - pattern-inside: |
-          var $EX=require('express')
           var $HELMET=require('helmet')
+          ...
+      
+      - pattern-inside: |
           var $APP = express(...)
-          function $FUNCT(...){
-            ...
-          }
+          ...
       - pattern: |
           $APP.use($HELMET.dnsPrefetchControl({
           allow: true
