--- a/Rule_Writing/insufficiently_protected_credentials.yaml
+++ b/Rule_Writing/insufficiently_protected_credentials.yaml
@@ -8,14 +8,9 @@ rules:
      For details on how to implement `RS256`:https://jwt.io/introduction/
     patterns:
       - pattern-inside: |
-          var $EX=require('express')
-          var $LG_CONTROLLER=$EX.Router(...)
           var $JWT = require('jsonwebtoken')
           ...
-          function $FUNCT(...){
-            ...
-          }
-      - pattern: var $TOKEN =$JWT.sign(...,{algorithm:'$X'})
+      - pattern: var $TOKEN =$JWT.sign(...,{algorithm:'$X'},...)
       - metavariable-regex:
               metavariable: $X
               regex: none|HS256|HS384|HS512|ES256
